--- a/about/index.html
+++ b/about/index.html
@@ -112,7 +112,7 @@ Since March 2022, I have been selected as an
 
 
 <footer class="footer layout__footer">
-<p>© {{ now.Year }} Tectalks</p>
+<p>© 2023 Tectalks</p>
 
 <p>Powered by <a href="https://gohugo.io/">Hugo</a> and the <a href="https://github.com/frjo/hugo-theme-zen">Zen theme</a>.</p>
 </footer>
