--- a/493/index.html
+++ b/493/index.html
@@ -111,7 +111,7 @@ No worries!! He created an intermediate table on the fly. Everything work perfec
 
 <footer class="footer layout__footer">
 <p>Follow 493: <a rel="alternate" type="application/rss&#43;xml" href="https://tectalks.com/493/index.xml">RSS</a></p>
-<p>© {{ now.Year }} Tectalks</p>
+<p>© 2023 Tectalks</p>
 
 <p>Powered by <a href="https://gohugo.io/">Hugo</a> and the <a href="https://github.com/frjo/hugo-theme-zen">Zen theme</a>.</p>
 </footer>
