--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ Before explaining more about the journey, let me tell you a little bit of backgr
 
 <footer class="footer layout__footer">
 <p>Follow: <a rel="alternate" type="application/rss&#43;xml" href="https://tectalks.com/index.xml">RSS</a></p>
-<p>© {{ now.Year }} Tectalks</p>
+<p>© 2023 Tectalks</p>
 
 <p>Powered by <a href="https://gohugo.io/">Hugo</a> and the <a href="https://github.com/frjo/hugo-theme-zen">Zen theme</a>.</p>
 </footer>
